--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
         <p>📞 01 23 45 67 89</p>
         <p>📧 contact@techservice.fr</p>
         <p>📍 Paris, France</p>
+        <form action="https://formspree.io/f/myyourformid" method="POST">
+    <label for="name">Nom :</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Email :</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="message">Message :</label>
+    <textarea id="message" name="message" required></textarea>
+
+    <button type="submit">Envoyer</button>
+</form>
     </section>
 
     <!-- Pied de page -->
