--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>TechService - Vente & Réparation</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <!-- En-tête -->
@@ -32,9 +33,10 @@
     <!-- Contact -->
     <section class="contact">
         <h2>Contactez-nous</h2>
-        <p>📞 01 23 45 67 89</p>
-        <p>📧 contact@techservice.fr</p>
-        <p>📍 Paris, France</p>
+        <p>📞 +222 26302901</p>
+        <p>📧 45hamath@gmail.com</p>
+        <p>📍 nouakchott Mauritanie </p>
+        
         <form action="https://formspree.io/f/myyourformid" method="POST">
     <label for="name">Nom :</label>
     <input type="text" id="name" name="name" required>
