--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title>TechService - Vente & Réparation</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <p><i class="fas fa-phone"></i> 01 23 45 67 89</p>
+<p><i class="fas fa-envelope"></i> contact@techservice.fr</p>
 </head>
 <body>
     <!-- En-tête -->
     <header>
         <h1>TechService</h1>
         <p>Vente et réparation de matériel informatique</p>
+        <img src="images/logo.png" alt="Logo TechService">
     </header>
 
     <!-- Services -->
