--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <!-- En-tête -->
     <header>
-        <h1>TechService</h1>
-        <p>Vente et réparation de matériel informatique</p>
-        <img src="images/logo.png" alt="Logo TechService">
+    <img src="images/logo.png" alt="Logo TechService" class="logo">
+    <h1>TechService</h1>
+    <p>globale service informatique</p>
+        
     </header>
 
     <!-- Services -->
@@ -52,6 +53,7 @@
 
     <button type="submit">Envoyer</button>
 </form>
+        
     </section>
 
     <!-- Pied de page -->
