--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
         <p>📧 45hamath@gmail.com</p>
         <p>📍 nouakchott Mauritanie </p>
         
-        <form action="https://formspree.io/f/myyourformid" method="POST">
+        <form action="https://formspree.io/f/xvgkpllj" method="POST">
     <label for="name">Nom :</label>
     <input type="text" id="name" name="name" required>
+
+    <label for="telephone ">telephone  :</label>
+    <textarea id="telephone" name="telephone" required></textarea>
 
     <label for="email">Email :</label>
     <input type="email" id="email" name="email" required>
