--- a/index.html
+++ b/index.html
@@ -2,40 +2,63 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechService - Vente & Réparation</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- En-tête -->
-    <header>
-        <img src="images/logo.png" alt="Logo TechService" class="logo">
-        <h1>TechService</h1>
-        <p>Globale service informatique</p>
-    </header>
+    <!-- Bannière d'accueil -->
+    <section class="banner">
+        <header>
+            <img src="images/logo.png" alt="Logo TechService" class="logo">
+            <h1>TechService</h1>
+            <p>Votre partenaire en services informatiques</p>
+        </header>
+    </section>
+
+    <!-- À propos -->
+    <section class="about">
+        <h2>À propos de nous</h2>
+        <p>TechService est une entreprise spécialisée dans la vente et la réparation de matériel informatique. Nous offrons également un support technique 24/7 pour répondre à tous vos besoins.</p>
+    </section>
 
     <!-- Services -->
     <section class="services">
+        <h2>Nos Services</h2>
         <div class="service-item">
+            <i class="fas fa-tools"></i>
             <h3>Réparation Ordinateurs</h3>
             <p>Réparation rapide de PC et Mac.</p>
         </div>
         <div class="service-item">
+            <i class="fas fa-laptop"></i>
             <h3>Vente de Matériel</h3>
             <p>Composants, accessoires et périphériques.</p>
         </div>
         <div class="service-item">
+            <i class="fas fa-headset"></i>
             <h3>Assistance 24/7</h3>
             <p>Support technique à distance.</p>
+        </div>
+    </section>
+
+    <!-- Témoignages -->
+    <section class="testimonials">
+        <h2>Témoignages</h2>
+        <div class="testimonial-item">
+            <p>"Service rapide et professionnel. Je recommande !"</p>
+            <span>- Client satisfait</span>
+        </div>
+        <div class="testimonial-item">
+            <p>"Très bon rapport qualité-prix. Merci TechService !"</p>
+            <span>- Autre client</span>
         </div>
     </section>
 
     <!-- Contact -->
     <section class="contact">
         <h2>Contactez-nous</h2>
-        <p>📞 +222 26302901</p>
-        <p>📧 45hamath@gmail.com</p>
-        <p>📍 Nouakchott, Mauritanie</p>
         <form action="https://formspree.io/f/xvgkpllj" method="POST">
             <label for="name">Nom :</label>
             <input type="text" id="name" name="name" required>
@@ -49,13 +72,18 @@
             <label for="message">Message :</label>
             <textarea id="message" name="message" required></textarea>
 
-            <button type="submit">Envoyer</button>
+            <button type="submit">Envoyer <i class="fas fa-paper-plane"></i></button>
         </form>
     </section>
 
     <!-- Pied de page -->
     <footer>
         <p>© 2024 TechService. Tous droits réservés.</p>
+        <div class="social-links">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
     </footer>
 </body>
 </html>
