--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bannière d'accueil -->
     <section class="banner">
         <header>
-            <img src="images/logo.png" alt="Logo TechService" class="logo">
+            <img src="images/logo.png" alt="Logo TechService" class="logo-left"> <!-- Logo aligné à gauche -->
             <h1>TechService</h1>
             <p>Votre partenaire en services informatiques</p>
         </header>
@@ -40,19 +40,6 @@
             <i class="fas fa-headset"></i>
             <h3>Assistance 24/7</h3>
             <p>Support technique à distance.</p>
-        </div>
-    </section>
-
-    <!-- Témoignages -->
-    <section class="testimonials">
-        <h2>Témoignages</h2>
-        <div class="testimonial-item">
-            <p>"Service rapide et professionnel. Je recommande !"</p>
-            <span>- Client satisfait</span>
-        </div>
-        <div class="testimonial-item">
-            <p>"Très bon rapport qualité-prix. Merci TechService !"</p>
-            <span>- Autre client</span>
         </div>
     </section>
 
