--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <section class="banner">
         <header>
             <img src="images/logo.png" alt="Logo TechService" class="logo-left"> <!-- Logo aligné à gauche -->
-            <h1>TechService</h1>
-            <p>Votre partenaire en services informatiques</p>
+            <div class="header-content">
+                <h1>TechService</h1>
+                <p>Votre partenaire en services informatiques</p>
+            </div>
         </header>
     </section>
 
