--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
 <body>
     <!-- Bannière d'accueil -->
     <section class="banner">
-        <header>
-            <img src="images/logo.png" alt="Logo TechService" class="logo-left"> <!-- Logo aligné à gauche -->
-            <div class="header-content">
-                <h1>TechService</h1>
-                <p>Votre partenaire en services informatiques</p>
-            </div>
-        </header>
+<!-- Dans la section <header> -->
+<header>
+    <img src="images/logo.png" alt="Logo TechService" class="logo-left">
+    <div class="header-content">
+        <h1>TechService</h1>
+        <p>Votre partenaire en services informatiques</p>
+        <!-- Ajoutez ce menu -->
+        <nav>
+            <a href="/">Accueil</a>
+            <a href="/blog">Blog</a>
+        </nav>
+    </div>
+</header>
     </section>
 
     <!-- À propos -->
