--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     <!-- Bannière d'accueil -->
     <section class="banner">
 <!-- Dans la section <header> -->
-<header>
-    <img src="images/logo.png" alt="Logo TechService" class="logo-left">
-    <div class="header-content">
-        <h1>TechService</h1>
-        <p>Votre partenaire en services informatiques</p>
-        <!-- Ajoutez ce menu -->
-        <nav>
-            <a href="/">Accueil</a>
-            <a href="/blog">Blog</a>
+<header class="main-header">
+    <div class="header-container">
+        <div class="branding">
+            <img src="images/logo.png" alt="Logo TechService" class="logo">
+            <div class="title-container">
+                <h1>TechService</h1>
+                <p class="tagline">Votre partenaire en services informatiques</p>
+            </div>
+        </div>
+        
+        <nav class="main-nav">
+            <a href="/" class="nav-link active">Accueil</a>
+            <a href="/blog/" class="nav-link">Blog</a>
+            <a href="#contact" class="cta-button">Contactez-nous</a>
         </nav>
     </div>
 </header>
