--- a/index.html
+++ b/index.html
@@ -3,113 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechService - Vente & Réparation</title>
-    <link rel="stylesheet" href="style.css">
+    <title>TechService | Réparation Informatique</title>
+    <link rel="stylesheet" href="style-modern.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- En-tête principal -->
-    <header class="main-header">
-        <div class="header-container">
-            <div class="branding">
-                <img src="images/logo.png" alt="Logo TechService" class="logo">
-                <div class="title-container">
-                    <h1 class="site-title">TechService</h1>
-                    <p class="site-tagline">Votre partenaire en services informatiques</p>
-                </div>
+    <header class="header">
+        <nav class="flex-between">
+            <h1 class="gradient-text">TechService</h1>
+            <div class="nav-menu">
+                <a href="#services" class="nav-link">Services</a>
+                <a href="#about" class="nav-link">À Propos</a>
+                <a href="#contact" class="cta-button">Prendre RDV</a>
             </div>
-            
-            <nav class="main-nav">
-                <a href="/" class="nav-link active">Accueil</a>
-                <a href="/blog/" class="nav-link">Blog</a>
-                <a href="#contact" class="cta-button">Contactez-nous</a>
-            </nav>
-        </div>
+        </nav>
     </header>
 
-    <!-- Bannière d'accueil -->
-    <section class="banner">
-        <div class="container">
-            <div class="banner-content">
-                <h2>Solutions informatiques professionnelles</h2>
-                <p>Service rapide et fiable pour particuliers et entreprises</p>
-            </div>
+    <section class="hero-section">
+        <div class="hero-content">
+            <h2>Réparation Express</h2>
+            <p>Diagnostic Gratuit • Garantie 2 Ans</p>
+            <button class="neon-button">Démarrer</button>
         </div>
     </section>
-
-    <!-- À propos -->
-    <section class="about">
-        <div class="container">
-            <h2>À propos de nous</h2>
-            <p>TechService est une entreprise spécialisée dans la vente et la réparation de matériel informatique. Nous offrons également un support technique 24/7 pour répondre à tous vos besoins.</p>
-        </div>
-    </section>
-
-    <!-- Services -->
-    <section class="services">
-        <div class="container">
-            <h2>Nos Services</h2>
-            <div class="services-grid">
-                <div class="service-item">
-                    <i class="fas fa-tools"></i>
-                    <h3>Réparation Ordinateurs</h3>
-                    <p>Réparation rapide de PC et Mac.</p>
-                </div>
-                <div class="service-item">
-                    <i class="fas fa-laptop"></i>
-                    <h3>Vente de Matériel</h3>
-                    <p>Composants, accessoires et périphériques.</p>
-                </div>
-                <div class="service-item">
-                    <i class="fas fa-headset"></i>
-                    <h3>Assistance 24/7</h3>
-                    <p>Support technique à distance.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact -->
-    <section class="contact" id="contact">
-        <div class="container">
-            <h2>Contactez-nous</h2>
-            <form action="https://formspree.io/f/xvgkpllj" method="POST">
-                <div class="form-group">
-                    <label for="name">Nom :</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                
-                <div class="form-group">
-                    <label for="telephone">Téléphone :</label>
-                    <input type="text" id="telephone" name="telephone" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Email :</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="message">Message :</label>
-                    <textarea id="message" name="message" required></textarea>
-                </div>
-
-                <button type="submit" class="cta-button">Envoyer <i class="fas fa-paper-plane"></i></button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Pied de page -->
-    <footer>
-        <div class="container">
-            <p>© 2024 TechService. Tous droits réservés.</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
