--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="main-header">
         <div class="header-container">
             <div class="branding">
-                <img src="images/logo.png" alt="Logo TechService" class="logo">
+                <img src="images/logo.png" alt="Logo ITS4YOU" class="logo">
                 <div class="title-container">
-                    <h1 class="site-title">TechService</h1>
+                    <h1 class="site-title">ITS4YOU</h1>
                     <p class="site-tagline">Votre partenaire en services informatiques</p>
                 </div>
             </div>
@@ -42,7 +42,7 @@
     <section class="about">
         <div class="container">
             <h2>À propos de nous</h2>
-            <p>TechService est une entreprise spécialisée dans la vente et la réparation de matériel informatique. Nous offrons également un support technique 24/7 pour répondre à tous vos besoins.</p>
+            <p>ITS4YOU est une entreprise spécialisée dans la vente et la réparation de matériel informatique. Nous offrons également un support technique 24/7 pour répondre à tous vos besoins.</p>
         </div>
     </section>
 
@@ -103,7 +103,7 @@
     <!-- Pied de page -->
     <footer>
         <div class="container">
-            <p>© 2024 TechService. Tous droits réservés.</p>
+            <p>© 2024 ITS4YOU. Tous droits réservés.</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
